# Lego-like-Geomagnetic-Positioning

./: .gitignore  CHANGELOG.md  geomag_web_app.py  magnetometer_map_own.py  main.py  main_multi_methods.py  pyproject.toml  run.bat  temp_test.py
Geomag/: algorithms.py  branching.py
data/own_data/: magnetometer_map_own.py
geomagnetic_positioning_ddtw.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
results/: multi_method_comparison_tt02.json  multi_method_comparison_tt02_smoke.json  multi_method_comparison_tt02_smoke_no_cso.json  v7_final_route1_run2.json  v7_final_route2_run1.json  v7_final_route2_run2.json
